--- a/app/views/v5/l2/users/add/details-custom.html
+++ b/app/views/v5/l2/users/add/details-custom.html
@@ -49,7 +49,7 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
-                <input type="hidden" value="{{ data['organisation-name'] }}" id="organisation-name" name="organisation-name">
+                <input type="hidden" value="{{ data['organisation-name-custom'] }}" id="organisation-name" name="organisation-name">
 
                 {{ govukButton({
                     text: "Continue"
