--- a/app/views/v5/l2/orgs/add/confirmation.html
+++ b/app/views/v5/l2/orgs/add/confirmation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Organisation added - {{serviceName}}
+  Organisation added - {{ data['organisation-name'] }}
 {% endblock %}
 
 {% block header %}
