--- a/app/views/v5/l2/orgs/add/inactive-until-updated.html
+++ b/app/views/v5/l2/orgs/add/inactive-until-updated.html
@@ -16,21 +16,21 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-l">Add a user</span>
-            <h1 class="govuk-heading-l">We need more information about {{ data['organisation-name'] }} before you can add users</h1>
+            <h1 class="govuk-heading-l">We need more information about {{ data['organisation-name-custom'] }} before you can add users</h1>
 
             <p>We need:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
                 {% if not data['contact-1-first-name'] and not data['contact-2-first-name'] %}
-                    <li>details of 2 contacts who work for {{ data['organisation-name'] }}</li>
+                    <li>details of 2 contacts who work for {{ data['organisation-name-custom'] }}</li>
                 {% endif %}
 
                 {% if data['contact-1-first-name'] and not data['contact-2-first-name'] %}
-                    <li>details of a second contact who works for {{ data['organisation-name'] }}</li>
+                    <li>details of a second contact who works for {{ data['organisation-name-custom'] }}</li>
                 {% endif %}
 
                 {% if not data['address-line-1'] %}
-                    <li>{{ data['organisation-name'] }}’s address</li>
+                    <li>{{ data['organisation-name-custom'] }}’s address</li>
                 {% endif %}
             </ul>
 
