--- a/app/views/v5/l2/orgs/add/includes/contacts-and-address.html
+++ b/app/views/v5/l2/orgs/add/includes/contacts-and-address.html
@@ -1,4 +1,4 @@
-{% if data['organisation-bame'] %}
+{% if data['organisation-name'] %}
     <input type="hidden" id="organisation-name" name="organisation-name" value="{{ data['organisation-name'] }}">
 {% endif %}
 
