Add space between first last name on delete check

--- a/app/views/v5/l2/users/edit/delete-check.html
+++ b/app/views/v5/l2/users/edit/delete-check.html
@@ -18,7 +18,7 @@
                     name: "delete-check",
                     fieldset: {
                         legend: {
-                            text: "Are you sure you want to delete " + data["user-first-name"] + data["user-last-name"] + "?",
+                            text: "Are you sure you want to delete " + data["user-first-name"] + " " + data["user-last-name"] + "?",
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--l"
                         }
