--- a/app/views/v5/l2/users/view/custom.html
+++ b/app/views/v5/l2/users/view/custom.html
@@ -50,6 +50,6 @@
     {% endif %}
 
     <p class="govuk-!-margin-top-9">
-        <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
     </p>
 {% endblock %}
