Update to statuses on filter select

--- a/app/views/v5/l2/users/view/all.html
+++ b/app/views/v5/l2/users/view/all.html
@@ -64,19 +64,19 @@
                         },
                         {
                             value: "active",
-                            text: "active"
+                            text: "Active"
                         },
                         {
                             value: "inactive",
-                            text: "inactive"
+                            text: "Inactive"
                         },
                         {
                             value: "pending activation",
-                            text: "pending activation"
+                            text: "Invite sent"
                         },
                         {
                             value: "invite expired",
-                            text: "invite expired"
+                            text: "Invite expired"
                         }
                     ]
                 }) }}
