Update to statuses on select

--- a/app/views/v5/l2/users/view/all.html
+++ b/app/views/v5/l2/users/view/all.html
@@ -71,7 +71,7 @@
                             text: "Inactive"
                         },
                         {
-                            value: "invite sent,
+                            value: "invite sent",
                             text: "Invite sent"
                         },
                         {
