--- a/app/views/v5/l2/orgs/add/summary.html
+++ b/app/views/v5/l2/orgs/add/summary.html
@@ -126,7 +126,7 @@
                 {% include './includes/contacts-and-address.html' %}
 
                 <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">
-                    Add {{ data['organisation-name'] }}
+                    Add {{ data['organisation-name-custom'] }}
                 </button>
             </form>
         </div>
