Fixed add user link on new org confirmation screen

--- a/app/views/v5/l2/orgs/add/confirmation.html
+++ b/app/views/v5/l2/orgs/add/confirmation.html
@@ -18,7 +18,7 @@
 
         {% if data['contact-1-first-name'] and data['contact-2-first-name'] and data['address-line-1'] %}
         <p>
-            <a href="../../users/add/start" class="govuk-link">
+            <a href="../../users/add/details-custom" class="govuk-link">
                 Add a user to {{ data['organisation-name'] }}
             </a>
         </p>
