--- a/app/views/dev1/user-add-user-prap-org.html
+++ b/app/views/dev1/user-add-user-prap-org.html
@@ -67,15 +67,15 @@
                 </fieldset>
             </form>
 
-            <p class="govuk-!-margin-top-6">
-                <a href="/mvp1/organisation-add-prap" class="govuk-link">
-                    Add an organisation
-                </a><br>
-
-                <a href="/mvp1/organisation-list-prap" class="govuk-link">
-                    View all organisations
-                </a>
-            </p>
+   
+            <ul class="govuk-list govuk-!-margin-top-6">
+                    <li>
+                        <a href="../../orgs/add/start" class="govuk-link">Add an organisation</a> 
+                    </li>
+                    <li>
+                        <a href="../../orgs/view/all" class="govuk-link">View all organisations</a>
+                    </li>
+                </ul>
         </div>
     </div>
 {% endblock %}
