--- a/app/views/v5/l2/contacts/view/custom.html
+++ b/app/views/v5/l2/contacts/view/custom.html
@@ -76,22 +76,41 @@
 
 
                 {% if data['contact-3-first-name'] %}
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header">
-                        <a href="single-3" class="govuk-link">
-                            {{ data["contact-3-first-name"] }} {{ data["contact-3-last-name"] }}
-                        </a>
-                    </th>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="single-3" class="govuk-link">
+                                {{ data["contact-3-first-name"] }} {{ data["contact-3-last-name"] }}
+                            </a>
+                        </th>
 
-                    <td class="govuk-table__cell">
-                        {{ data["contact-3-email"] }}
-                    </td>
+                        <td class="govuk-table__cell">
+                            {{ data["contact-3-email"] }}
+                        </td>
 
-                    <td class="govuk-table__cell">
-                        {{ data["contact-3-phone"] }}
-                    </td>
+                        <td class="govuk-table__cell">
+                            {{ data["contact-3-phone"] }}
+                        </td>
                 </tr>
-            {% endif %}
+                {% endif %}
+
+
+                {% if data['contact-0-first-name'] %}
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="single-3" class="govuk-link">
+                                {{ data["contact-0-first-name"] }} {{ data["contact-0-last-name"] }}
+                            </a>
+                        </th>
+
+                        <td class="govuk-table__cell">
+                            {{ data["contact-0-email"] }}
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            {{ data["contact-0-phone"] }}
+                        </td>
+                    </tr>
+                {% endif %}
 
 
 
