Updates to changes on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -59,6 +59,10 @@
                 <li>Added journey for <a href="v5/l3/register/start">new user registration</a> with 2FA and Authenticator app backup option</li>
 
                 <li>Added journey for <a href="/v5/l2/reset-password/start">reset password</a></li>
+
+                <li>Added pages to view and add organisation contacts</li>
+
+                <li>Added page to edit organisation address</li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
