Added contacts for Capita

--- a/app/views/v5/l2/orgs/view/capita.html
+++ b/app/views/v5/l2/orgs/view/capita.html
@@ -52,7 +52,7 @@
                         </li>
 
                         <li>
-                            <a href="contacts-list-capita" class="govuk-link">View all contacts</a>
+                            <a href="../../contacts/view/contacts-capita" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
