--- a/app/views/v5/l2/reset-password/create-new-password.html
+++ b/app/views/v5/l2/reset-password/create-new-password.html
@@ -53,7 +53,7 @@
             </div>
                   
             {{ govukButton({
-                text: "Create password",
+                text: "Create new password",
                 href: "password-reset-confirmation.html"
             }) }}
   </div>
