Populated contacts for remaining orgs

--- a/app/views/v5/l2/orgs/view/g4s.html
+++ b/app/views/v5/l2/orgs/view/g4s.html
@@ -49,11 +49,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="#" class="govuk-link">Add a contact</a>
+                            <a href="../../contacts/add/details-custom" class="govuk-link">Add a contact</a>
                         </li>
 
                         <li>
-                            <a href="#" class="govuk-link">View all contacts</a>
+                            <a href="../../contacts/view/contacts-g4s" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
