--- a/app/views/v5/l2/orgs/view/croydon.html
+++ b/app/views/v5/l2/orgs/view/croydon.html
@@ -42,18 +42,18 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        4
+                        3
 
                         <span class="govuk-visually-hidden">contacts in the system</span>
                     </p>
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="#" class="govuk-link">Add a contact</a>
+                            <a href="../../contacts/add/details-custom" class="govuk-link">Add a contact</a>
                         </li>
 
                         <li>
-                            <a href="#" class="govuk-link">View all contacts</a>
+                            <a href="../../contacts/view/contacts-croydon" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
