Update contacts view file names

--- a/app/views/v5/l2/orgs/view/g4s.html
+++ b/app/views/v5/l2/orgs/view/g4s.html
@@ -53,7 +53,7 @@
                         </li>
 
                         <li>
-                            <a href="../../contacts/view/contacts-g4s" class="govuk-link">View all contacts</a>
+                            <a href="../../contacts/view/g4s" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
