--- a/app/views/v5/l2/orgs/view/serco.html
+++ b/app/views/v5/l2/orgs/view/serco.html
@@ -53,7 +53,7 @@
                         </li>
 
                         <li>
-                            <a href="../../contacts/view/contacts-serco" class="govuk-link">View all contacts</a>
+                            <a href="../../contacts/view/serco" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
