--- a/app/views/v5/l2/orgs/view/remploy.html
+++ b/app/views/v5/l2/orgs/view/remploy.html
@@ -52,7 +52,7 @@
                         </li>
 
                         <li>
-                            <a href="../../contacts/view/contacts-remploy" class="govuk-link">View all contacts</a>
+                            <a href="../../contacts/view/remploy" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
