Update contact add filenames and links

--- a/app/views/v5/l2/contacts/add/custom.html
+++ b/app/views/v5/l2/contacts/add/custom.html
@@ -19,7 +19,7 @@
                         <span class="govuk-caption-l">{{ data['organisation-name-custom'] }}</span>
                         Add a contact
                     </h1>
-            <form action="contact-added-confirmation" method="post" class="form">
+            <form action="confirmation" method="post" class="form">
                 {% call govukFieldset({
                     legend: {
                         html: '',
