--- a/app/views/v5/l2/contacts/view/dwp.html
+++ b/app/views/v5/l2/contacts/view/dwp.html
@@ -22,7 +22,7 @@
             Contacts
         </h1>
 
-        <a href="../../contacts/add/details-custom" class="govuk-button listing-page">
+        <a href="../../contacts/add/custom" class="govuk-button listing-page">
             Add a contact
         </a>
 
@@ -95,11 +95,11 @@
                                     Simon Kenyon
                                 </a>
                             </th>
-    
+
                             <td class="govuk-table__cell">
                                 simon.kenyon@dwp.gov.uk
                             </td>
-    
+
                             <td class="govuk-table__cell">
                                 07787237356
                             </td>
