--- a/app/views/v5/l2/contacts/view/remploy.html
+++ b/app/views/v5/l2/contacts/view/remploy.html
@@ -22,7 +22,7 @@
             Contacts
         </h1>
 
-        <a href="../../contacts/add/details-custom" class="govuk-button listing-page">
+        <a href="../../contacts/add/custom" class="govuk-button listing-page">
             Add a contact
         </a>
 
@@ -77,16 +77,16 @@
                                     Phil Hay
                                 </a>
                             </th>
-    
+
                             <td class="govuk-table__cell">
                                 phil.hay@remploy.co.uk
                             </td>
-    
+
                             <td class="govuk-table__cell">
                                 07788972467
                             </td>
                         </tr>
-                    
+
 
             </tbody>
         </table>
