--- a/app/views/v5/l2/orgs/view/all.html
+++ b/app/views/v5/l2/orgs/view/all.html
@@ -69,7 +69,7 @@
                                         View user
                                     </a>
                                 {% else %}
-                                    <a href="../../users/add/details-custom" class="govuk-link">
+                                    <a href="../../users/add/custom" class="govuk-link">
                                         Add user
                                     </a>
                                 {% endif %}
