--- a/app/views/v5/l2/orgs/view/custom.html
+++ b/app/views/v5/l2/orgs/view/custom.html
@@ -74,13 +74,13 @@
 
                         {% if data['contact-1-first-name'] %}
                             <ul class="govuk-list">
-                                <li><a href="../../contacts/add/details-custom" class="govuk-link">Add a contact</a></li>
+                                <li><a href="../../contacts/add/custom" class="govuk-link">Add a contact</a></li>
                                 <li><a href="../../contacts/view/custom" class="govuk-link">View all contacts</a></li>
 
                             </ul>
                         {% else %}
                             <ul class="govuk-list">
-                                <li><a href="../../contacts/add/details-custom" class="govuk-link">Add a contact</a></li>
+                                <li><a href="../../contacts/add/custom" class="govuk-link">Add a contact</a></li>
                             </ul>
                         {% endif %}
 
@@ -108,7 +108,7 @@
                     <ul class="govuk-list">
                         {% if data['organisation-name-custom'] and data['address-line-1'] and data['contact-1-first-name'] and data['contact-2-first-name'] %}
                             <li>
-                                <a href="../../users/add/details-custom" class="govuk-link">Add a user</a>
+                                <a href="../../users/add/custom" class="govuk-link">Add a user</a>
                             </li>
                         {% else %}
                             <li>
