--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,21 +21,32 @@
 
             <h2 class="govuk-heading-l">v5</h2>
 
-            <!--<a href="/v5/l1/signin" class="govuk-button govuk-!-margin-right-1">
-                View as a L1 super admin
-            </a>-->
+            <form action="/v5/l2/signin" method="post" class="form">
+                <fieldset class="govuk-fieldset">
+                    {{ govukSelect({
+                        id: "prototype-service",
+                        name: "prototype-service",
+                        label: {
+                            text: "Service"
+                        },
+                        items: [
+                            {
+                                value: "HTDS",
+                                text: "HDTS",
+                                selected: true
+                            },
+                            {
+                                value: "PRaP",
+                                text: "PRaP"
+                            }
+                        ]
+                    }) }}
 
-            <a href="/v5/l2/signin" class="govuk-button govuk-!-margin-right-1">
-                View as a L2 service admin
-            </a>
-
-            <!--<a href="/v5/l3/signin" class="govuk-button govuk-!-margin-right-1">
-                View as a L3 organisation admin
-            </a>
-
-            <a href="/v5/l4/signin" class="govuk-button govuk-!-margin-right-1">
-                View as a L4 user
-            </a>-->
+                    <button type="submit" class="govuk-button govuk-!-margin-right-1">
+                        View as a L2 service admin
+                    </button>
+                </fieldset>
+            </form>
 
             <h3 class="govuk-heading-s">General changes</h3>
 
