--- a/app/views/v5/l2/dashboard.html
+++ b/app/views/v5/l2/dashboard.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">HTDS</h1>
+<h1 class="govuk-heading-l">{{ data['prototype-service'] }}</h1>
 
 <div class="govuk-cards govuk-cards--2">
     <div class="govuk-cards--2__item govuk-card--dashboard">
