Amend to authenticator app setup page

--- a/app/views/v5/l3/register/qrcode.html
+++ b/app/views/v5/l3/register/qrcode.html
@@ -53,7 +53,7 @@
                     href: "auth-app"
                 }) }}
 
-                <p><a href="backup-app-branch">I don't want to set this up</a></p>
+                <p><a href="registration-complete">I'll just use text messages</a></p>
             
 
   </div>
