Rename custom details view to match how orgs/users are named

--- a/app/views/v5/l2/orgs/view/custom.html
+++ b/app/views/v5/l2/orgs/view/custom.html
@@ -108,7 +108,7 @@
                     <ul class="govuk-list">
                         {% if data['organisation-name-custom'] and data['address-line-1'] and data['contact-1-first-name'] and data['contact-2-first-name'] %}
                             <li>
-                                <a href="../../users/add/custom" class="govuk-link">Add a user</a>
+                                <a href="../../users/add/details-custom" class="govuk-link">Add a user</a>
                             </li>
                         {% else %}
                             <li>
