--- a/app/views/v5/l2/contacts/view/g4s.html
+++ b/app/views/v5/l2/contacts/view/g4s.html
@@ -22,7 +22,7 @@
             Contacts
         </h1>
 
-        <a href="../../contacts/add/custom" class="govuk-button listing-page">
+        <a href="../../contacts/add/details-custom" class="govuk-button listing-page">
             Add a contact
         </a>
 
