--- a/app/views/v5/l2/orgs/edit/edit-confirm.html
+++ b/app/views/v5/l2/orgs/edit/edit-confirm.html
@@ -16,10 +16,9 @@
             html: data["organisation-name-custom"]
         }) }}
 
-
         <p>
-            <a href="../../dashboard" class="govuk-link">
-                Back to dashboard
+            <a href="../view/custom" class="govuk-link">
+                Back to organisation details
             </a>
         </p>
     </div>
