--- a/app/views/v5/l2/orgs/view/custom.html
+++ b/app/views/v5/l2/orgs/view/custom.html
@@ -45,11 +45,11 @@
 
                     {% if data['address-line-1'] %}
                         <p>
-                            <a href="../../orgs/edit/edit-address" class="govuk-link">Edit organisation address</a>
+                            <a href="../edit/address" class="govuk-link">Edit organisation address</a>
                         </p>
                     {% else %}
                         <p>
-                            <a href="organisation-add-address-only" class="govuk-link">Add organisation address</a>
+                            <a href="../add/address-only" class="govuk-link">Add organisation address</a>
                         </p>
                     {% endif %}
                 </div>
