Update all add user buttons on user view lists, change some dynamic service names

--- a/app/views/v5/l2/dashboard-no-orgs.html
+++ b/app/views/v5/l2/dashboard-no-orgs.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - HTDS - {{serviceName}}
+  Dashboard - {{ data['prototype-service'] }}
 {% endblock %}
 
 {% block header %}
