--- a/app/views/v5/l2/users/view/custom.html
+++ b/app/views/v5/l2/users/view/custom.html
@@ -19,7 +19,7 @@
         Users
     </h1>
 
-    <a href="user-add-user-prap-new" class="govuk-button listing-page">Add user</a>
+    <a href="../add/details-custom" class="govuk-button listing-page">Add user</a>
 
     {% if data['user-first-name'] and data['user-last-name'] %}
         <table class="govuk-table">
