--- a/app/views/v5/l2/users/view/g4s.html
+++ b/app/views/v5/l2/users/view/g4s.html
@@ -15,7 +15,7 @@
         Users
     </h1>
 
-    <a href="user-add-user-prap-g4s" class="govuk-button listing-page">Add a user</a>
+    <a href="../add/details-g4s" class="govuk-button listing-page">Add a user</a>
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
