--- a/app/views/v5/l2/users/view/remploy.html
+++ b/app/views/v5/l2/users/view/remploy.html
@@ -15,7 +15,7 @@
         Users
     </h1>
 
-    <a href="user-add-user-prap-remploy" class="govuk-button listing-page">Add a user</a>
+    <a href="../add/details-remploy" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
